Cập nhật code sau khi sửa